Fixed header z-index

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -70,7 +70,7 @@ input:focus {
   height: 80px;
   width: 100%;
   padding: 10px 20px;
-  z-index: 100;
+  z-index: 1000;
 }
 .header:after,
 .header:before {
