--- a/src/styl/_header.styl
+++ b/src/styl/_header.styl
@@ -7,7 +7,7 @@
   height 80px
   width 100%
   padding 10px 20px
-  z-index 100
+  z-index 1000
 
 h1
   margin-top 5px
